<?xml version="1.0"?>
<package>
  <name>my_dogrobot_description</name>
  <version>1.0.0</version>
  <description>my dogrobot description package</description>

  <maintainer email="lime3927@gmail.com">lime-crystal</maintainer>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
</package>
